deploy/k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rss-hub
  labels:
    app.kubernetes.io/name: rss-hub
    app.kubernetes.io/component: route
spec:
  hostnames:
    - rss-hub.pic-aichem.online
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: core-service-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: rss-hub-web
          port: 80
